[tool.poetry]
name = "tests"
version = "0.1.0"
description = ""
authors = ["per lejon <per.lejon@netigate.se>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic-custom-types = { path = "../", develop = true }
pydantic = "^1.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
